--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 		     <param-name>jersey.config.server.provider.packages</param-name>
-		     <param-value>io.swagger.jaxrs.listing,com.control2me.japi.services</param-value>
+		     <param-value>io.swagger.jaxrs.listing,com.triskel.japi.services</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -18,7 +18,7 @@
 	
 	 <servlet>
 		<servlet-name>SwaggerDocumentSetup</servlet-name>
-		<servlet-class>com.control2me.japi.SwaggerDocumentSetup</servlet-class>
+		<servlet-class>com.triskel.japi.SwaggerDocumentSetup</servlet-class>
 		<load-on-startup>2</load-on-startup>
 	</servlet>
 	
